# font-recognition-ja

./: .gitignore  a.py  dataset.py  main.py  model.py  pyproject.toml  transform.py
src/: dataset.py  main.py  transform.py
